# Perceptron

./: AdrianWasHere  BezBiasuIWpsolczynnika\.txt  BezBiazIMoment.txt  CMakeLists.txt  DataSet.txt  Fixed02.txt  Graph.txt  Setup.txt
data/: data1.in  iris.in
iris/: processiris.sh
project/: Makefile
project/src/: Aplikacja.cpp  Dane.cpp  Dane.hpp  Funkcja.cpp  Funkcja.hpp  Losowanie.cpp  Losowanie.hpp  Siec.cpp  Siec.hpp  Warstwa.cpp  Warstwa.hpp
utils/: log2data.py  opissieci.py  plotmaker.sh  przebieg.py
